--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="about-img h-100">
                             <div class="about-img-inner d-flex h-100">
-                                <img src="img/fitness-goal-banner.jpg" class="img-fluid h-100" style="object-fit: cover;" alt="">
+                                <img src="fitness-goal-banner.jpg" class="img-fluid h-100" style="object-fit: cover;" alt="">
                             </div>
                         </div>
                     </div>
@@ -276,7 +276,7 @@
                             <div class="goal-item d-flex p-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                        <img src="img/icon-1.png" class="img-fluid" alt="">
+                                        <img src="icon-1.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                                 <div>
@@ -288,7 +288,7 @@
                             <div class="goal-item d-flex p-4 mb-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                        <img src="img/icon-6.png" class="img-fluid" alt="">
+                                        <img src="icon-6.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                               <div>
@@ -304,7 +304,7 @@
                     </div>
                     <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="h-100">
-                            <img src="img/pexels-rdne-7045741.jpg" style="object-fit: scale-down;" alt="">
+                            <img src="pexels-rdne-7045741.jpg" style="object-fit: scale-down;" alt="">
                         </div>
                     </div>
                 </div>
@@ -337,7 +337,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" class="img-fluid w-100" alt="Image">                            </div>
+                                <img src="team-1.jpg" class="img-fluid w-100" alt="Image">                            </div>
                             <div class="team-content">
                               <h4>Master Sarah Nova</h4>
                               <p class="mb-0">5th dan blackbelt karate</p>
@@ -351,7 +351,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-2.jpg" class="img-fluid w-100" alt="Image">                            </div>
+                                <img src="team-2.jpg" class="img-fluid w-100" alt="Image">                            </div>
                             <div class="team-content">
                                 <h4>Master Mauricio Gomez</h4>
                               <p class="mb-0">Coaches in all martial arts</p>
@@ -365,7 +365,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-3.jpg" class="img-fluid w-100" alt="Image">                            </div>
+                                <img src="team-3.jpg" class="img-fluid w-100" alt="Image">                            </div>
                             <div class="team-content">
                                 <h4>Master Morris Davis</h4>
                               <p class="mb-0">Assistant Martial arts coach</p>
@@ -378,7 +378,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" class="img-fluid w-100" alt="Image">                            </div>
+                                <img src="team-4.jpg" class="img-fluid w-100" alt="Image">                            </div>
                             <div class="team-content">
                                 <h4>Master harpreet kaur</h4>
                               <p class="mb-0">M&nbsp;</p>
@@ -403,7 +403,7 @@
                     <div class="testimonial-item mx-auto" style="max-width: 900px;">
                         <span class="fa fa-quote-left fa-3x quote-icon"></span>
                         <div class="testimonial-img mb-4">
-                            <img src="img/testimonial-1.jpg" class="img-fluid" alt="Image">
+                            <img src="testimonial-1.jpg" class="img-fluid" alt="Image">
                         </div>
                         <p class="fs-4 text-white mb-4">Enrolling my daughter in the self-defense program at Tiger Martial Arts was the best decision I’ve made. She has become so much more confident and aware of her surroundings.
                         </p>
@@ -421,7 +421,7 @@
                     <div class="testimonial-item mx-auto" style="max-width: 900px;">
                         <span class="fa fa-quote-left fa-3x quote-icon"></span>
                         <div class="testimonial-img mb-4">
-                            <img src="img/testimonial-2.jpg" class="img-fluid" alt="Image">
+                            <img src="testimonial-2.jpg" class="img-fluid" alt="Image">
                         </div>
                         <p class="fs-4 text-white mb-4">The instructors are patient and encouraging. My son not only learned valuable safety skills but also developed respect and discipline that show in his everyday life.
                         </p>
@@ -439,7 +439,7 @@
                     <div class="testimonial-item mx-auto" style="max-width: 900px;">
                         <span class="fa fa-quote-left fa-3x quote-icon"></span>
                         <div class="testimonial-img mb-4">
-                            <img src="img/testimonial-3.jpg" class="img-fluid" alt="Image">
+                            <img src="testimonial-3.jpg" class="img-fluid" alt="Image">
                         </div>
                         <p class="fs-4 text-white mb-4">Tiger Martial Arts has completely transformed my son’s focus and determination. Competing has taught him resilience and sportsmanship, and he looks forward to every tournament.
                         </p>
