--- a/course.html
+++ b/course.html
@@ -18,15 +18,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
-        <link rel="stylesheet" href="lib/animate/animate.min.css"/>
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="animate.min.css"/>
+        <link href="owl.carousel.min.css" rel="stylesheet">
 
 
         <!-- Customized Bootstrap Stylesheet -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -46,7 +46,7 @@
                 <div class="d-flex align-items-center h-100">
                     <a href="#" class="navbar-brand" style="height: 125px;">
                         <h1 class="text-primary mb-0"><i class="fas fa-hand-rock me-2"></i> Fitness</h1>
-                        <!-- <img src="img/logo.png" alt="Logo"> -->
+                        <!-- <img src="logo.png" alt="Logo"> -->
                     </a>
                 </div>
                 <div class="w-100 h-100">
@@ -82,7 +82,7 @@
                         <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-lg-end">
                             <a href="#" class="navbar-brand-2">
                                 <h1 class="text-primary mb-0"><i class="fas fa-hand-rock me-2"></i> Fitness</h1>
-                                <!-- <img src="img/logo.png" alt="Logo"> -->
+                                <!-- <img src="logo.png" alt="Logo"> -->
                             </a> 
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                                 <span class="fa fa-bars"></span>
@@ -161,7 +161,7 @@
                             <div class="goal-item d-flex p-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                        <img src="img/icon-6.png" class="img-fluid" alt="">
+                                        <img src="icon-6.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                                 <div>
@@ -173,7 +173,7 @@
                             <div class="goal-item d-flex p-4 mb-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                        <img src="img/icon-6.png" class="img-fluid" alt="">
+                                        <img src="icon-6.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                                 <div>
@@ -186,7 +186,7 @@
 						  <div class="goal-item d-flex p-4 mb-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                        <img src="img/icon-6.png" class="img-fluid" alt="">
+                                        <img src="icon-6.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                                 <div>
@@ -199,7 +199,7 @@
 							<div class="goal-item d-flex p-4 mb-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                        <img src="img/icon-6.png" class="img-fluid" alt="">
+                                        <img src="icon-6.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                                 <div>
@@ -212,7 +212,7 @@
 							<div class="goal-item d-flex p-4 mb-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                      <img src="img/icon-6.png" class="img-fluid" alt="">
+                                      <img src="icon-6.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                                 <div>
@@ -225,7 +225,7 @@
 							<div class="goal-item d-flex p-4 mb-4">
                                 <div class="d-flex me-4">
                                     <div class="bg-primary d-inline p-3" style="width: 80px; height: 80px;">
-                                      <img src="img/icon-6.png" class="img-fluid" alt="">
+                                      <img src="icon-6.png" class="img-fluid" alt="">
                                     </div>
                                 </div>
                                 <div>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="h-100">
-                            <img src="img/fitness-goal-banner.jpg" class="img-fluid h-100" style="object-fit: cover;" alt="">
+                            <img src="fitness-goal-banner.jpg" class="img-fluid h-100" style="object-fit: cover;" alt="">
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                             <div class="courses-item-inner p-4">
                                 <div class="d-flex justify-content-between mb-4">
                                     <div class="courses-icon-img p-3">
-                                        <img src="img/icon-1.png" class="img-fluid" alt="">
+                                        <img src="icon-1.png" class="img-fluid" alt="">
                                     </div>
 </div>
                                 <p class="mb-4">6 week beginners self-defence course</p>
@@ -278,7 +278,7 @@
                             <div class="courses-item-inner p-4">
                                 <div class="d-flex justify-content-between mb-4">
                                     <div class="courses-icon-img p-3">
-                                        <img src="img/icon-1.png" class="img-fluid" alt="">
+                                        <img src="icon-1.png" class="img-fluid" alt="">
                                     </div>
 </div>
                               <p class="mb-4">use of fittnes room</p>
@@ -294,7 +294,7 @@
                             <div class="courses-item-inner p-4">
                                 <div class="d-flex justify-content-between mb-4">
                                     <div class="courses-icon-img p-3">
-                                        <img src="img/icon-1.png" class="img-fluid" alt="">
+                                        <img src="icon-1.png" class="img-fluid" alt="">
                                     </div>
 </div>
                               <p class="mb-4">personal fitness traning</p>
@@ -330,7 +330,7 @@
                     <div class="testimonial-item mx-auto" style="max-width: 900px;">
                         <span class="fa fa-quote-left fa-3x quote-icon"></span>
                         <div class="testimonial-img mb-4">
-                            <img src="img/testimonial-1.jpg" class="img-fluid" alt="Image">
+                            <img src="testimonial-1.jpg" class="img-fluid" alt="Image">
                         </div>
                         <p class="fs-4 text-white mb-4">Enrolling my daughter in the self-defense program at Tiger Martial Arts was the best decision I’ve made. She has become so much more confident and aware of her surroundings.
                         </p>
@@ -348,7 +348,7 @@
                     <div class="testimonial-item mx-auto" style="max-width: 900px;">
                         <span class="fa fa-quote-left fa-3x quote-icon"></span>
                         <div class="testimonial-img mb-4">
-                            <img src="img/testimonial-2.jpg" class="img-fluid" alt="Image">
+                            <img src="testimonial-2.jpg" class="img-fluid" alt="Image">
                         </div>
                         <p class="fs-4 text-white mb-4">The instructors are patient and encouraging. My son not only learned valuable safety skills but also developed respect and discipline that show in his everyday life.
                         </p>
@@ -366,7 +366,7 @@
                     <div class="testimonial-item mx-auto" style="max-width: 900px;">
                         <span class="fa fa-quote-left fa-3x quote-icon"></span>
                         <div class="testimonial-img mb-4">
-                            <img src="img/testimonial-3.jpg" class="img-fluid" alt="Image">
+                            <img src="testimonial-3.jpg" class="img-fluid" alt="Image">
                         </div>
                         <p class="fs-4 text-white mb-4">Tiger Martial Arts has completely transformed my son’s focus and determination. Competing has taught him resilience and sportsmanship, and he looks forward to every tournament.
                         </p>
